<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Item TrackR</string>
    <string name="mapViewLabel">MapViewActivityLabel</string>
    <string name="overlayLocationListLabel">OverlayLocationListActivityLabel</string>
    <string name="buttonTextLocationList">List</string>
    <string name="buttonOverlayLocationToMap">Map</string>
    <string name="buttonTextMapLayerSatellite">Satellite</string>
    <string name="buttonTextMapLayerNormal">Normal</string>
    <string name="labelTextLocation">Item Location</string>
    <string name="buttonTextBack">Back</string>
    <string name="itemHomeViewLabel">ItemHomeViewActivity</string>
    <string name="contentDescriptionPageRight">Page Right</string>
    <string name="contentDescriptionPageLeft">Page Left</string>
    <string name="contentDescriptionDotSelected">Selected Page Indicator</string>
    <string name="contentDescriptionDotUnselected">Unselected Page Indicator</string>
    <string name="contentDescriptionHome">Home</string>
    <string name="contentDescriptionSettings">Settings</string>
    <string name="contentDescriptionInSiteLogo">inSite Logo</string>
    <string name="contentDescriptionDeviceImage">Device Image</string>
    <string name="contentDescriptionButtonAlarm">Alarm Button</string>
    <string name="contentDescriptionButtonLocate">Locate Button</string>
    <string name="noValue">--</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="contentDescriptionBatteryLevelImage">Battery Level Image</string>
    <string name="contentDescriptionRssiStateImage">RSSI state image</string>
    <string name="done">Done</string>
    <string name="deviceList">Device List</string>
    <string name="addInsiteDevice">Add a new device</string>
    <string name="buttonEdit">Edit</string>
    <string name="labelSettings">Settings</string>
    <string name="contentDescriptionAudiovoxPoweredByPhoneHalo">powered by PhoneHalo</string>
    <string name="locateDevice">Locate Device</string>
    <string name="ringDevice">Ring Device</string>
    <string name="rssiDistanceFar">Far</string>
    <string name="rssiDistanceMedium">Moderate</string>
    <string name="rssiDistanceNear">Close</string>
    <string name="percentSign">%</string>
    <string name="batteryPercentFormat">{0}{1}</string>
    <string name="connecting">Connecting</string>
    <string name="dicoveredDevices">Discovered Devices</string>
    <string name="labelAddDevice">Add Device</string>
    <string name="contentDescriptionAudioAlertsDisabledIcon">Alerts Disabled Indicator Icon</string>
    <string name="cameraButtonInstructions">Select the Camera Icon to\nUse Your Own Image</string>
    <string name="useYourOwn">Use Your Own</string>
    <string name="keys">Keys</string>
    <string name="briefcase">Briefcase</string>
    <string name="wallet">Wallet</string>
    <string name="purse">Purse</string>
    <string name="cameraBag">Camera Bag</string>
    <string name="takeOrSelectPhoto">Take or Select a Photo</string>
    <string name="labelDeviceSettings">Device Settings</string>
    <string name="basicSettings">Basic Settings</string>
    <string name="deviceName">Device Name:</string>
    <string name="deviceImage">Device Image:</string>
    <string name="deviceAlertSettings">Device Alert Settings</string>
    <string name="deviceAlert">Device Alert:</string>
    <string name="phoneAlert">Phone Alert:</string>
    <string name="phoneVibrate">Phone Vibrate:</string>
    <string name="chooseAlarm">Choose Alarm Song</string>
    <string name="phoneAlertSettings">Phone Alert Settings</string>
    <string name="customIcon">Custom Image</string>
    <string name="durationNone">Off</string>
    <string name="durationThreeRings">3 Rings</string>
    <string name="durationContinuous">Continuous</string>
    <string name="seconds_lowercase">seconds</string>
    <string name="alarmDuration">Alarm Duration</string>
    <string name="emailNotifications">Email Notifications</string>
    <string name="emailAddress">Email Address:</string>
    <string name="emailCCAddress">CC Address:</string>
    <string name="emailAlerts">Email Alerts</string>
    <string name="twitterNotifications">Twitter Notifications</string>
    <string name="tweetDisconnectMap">Tweet Disconnect Map</string>
    <string name="facebookNotifications">Facebook Notifications</string>
    <string name="enableFacebookAlerts">Enable Facebook Alerts</string>
    <string name="aboutAudiovox">About Audiovox</string>
    <string name="aboutPhoneHalo">About Phone Halo</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="softwareVersion">Software Version</string>
    <string name="about">About</string>
    <string name="error_connecting">Error Connecting To Device.  Please Remove &amp; Reinsert Battery and Try Again</string>
    <string name="failed_to_connect">Failed to Connect</string>
    <string name="framework_error">Framework Error</string>
    <string name="framework_error_msg">Your device does not have the required framework support.  Please update your phone.</string>
    <string name="softwareVersionValue">0.20131009</string>
    <string name="urlAboutAudioVox">http://www.voxxintl.com</string>
    <string name="urlAboutPhoneHalo">http://www.phonehalo.com</string>
    <string name="urlFAQ">http://phonehalo.zendesk.com</string>
    <string name="app_id">182719581740136</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_starting">StartingActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="image_description">Screen Images</string>
    <string name="starting_text">Use TrackR to locate Bluetooth enabled items using your phone.Find any lost items in seconds!</string>
    <string name="btn_get_started">Get Started</string>
    <string name="title_activity_registration">Registration</string>
    <string name="first_name_text">First Name :</string>
    <string name="last_name_text">Last Name :</string>
    <string name="email_txt">Email :</string>
    <string name="cancel_text">Cancel</string>
    <string name="next_text">Next</string>
    <string name="registration_text">Registration</string>
    <string name="title_activity_device">Device</string>
    <string name="device_msg">Do you have a TrackR Device? </string>
    <string name="yes_text">YES</string>
    <string name="no_text">NO</string>
    <string name="title_activity_instruction">Instruction</string>
    <string name="back_text">Back</string>
    <string name="instruction_one_txt">1) Ensure Bluetooth turned on inside the Settings Application.</string>
    <string name="instruction_two_txt">2) Pull out the battery try and pop it back in.</string>
    <string name="instruction_three_txt">3) When the light begins to flash,please press continue.</string>
    <string name="continue_text">Continue</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="featured_txt">Featured</string>
    <string name="buy_txt">Buy</string>
    <string name="feature_screen_1_text">TrackR helps you quickly locate lost items from your phone.</string>
    <string name="feature_screen_2_text">The app monitors where the users items is.If the user is about to leave their items or phone behind, the app and device ring to notify the user.Saving the user that extra trip back.</string>
    <string name="feature_screen_3_text">TrackR works with small wireless devices that can be easily attached to any item.</string>
    <string name="feature_screen_4_text">Lost an item? TrackR automatically records where you left items on a map.This way you always know where your stuff is.</string>
    <string name="feature_screen_5_text">Cannot find your phone? Never waste time searching or asking freinds to call your phone.With the press of a button on the device, cause your phone to ring(even it`s on silent!)</string>
    <string name="feature_screen_6_text">TrackR enables user to quickly locate misplaced items.The app indicates the approximate distance between the user and their item.The user can then ring their item from the app and find their items in seconds.</string>
    <string name="feature_screen_7_text">Get a TrackR device today and effortlessly stay organized.</string>
    <string name="registrationTxt">Get Started by registering for customer support and product updates</string>
    <string name="get_started_btn_text">Get Started</string>
    
</resources>