<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/newestbackground"
    tools:context=".InstructionActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_description"
        android:src="@drawable/instruction_image" />
    
   <TextView
        android:id="@+id/instruction_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/instruction_one_txt"
        android:textColor="#ffffff" />
   
   <TextView
        android:id="@+id/instruction_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/instruction_two_txt"
        android:textColor="#ffffff" />
   
   
   <TextView
        android:id="@+id/instruction_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/instruction_three_txt"
        android:textColor="#ffffff" />

</LinearLayout>
