<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#00000000"
    android:layout_height="wrap_content"
    >

    <Button
        android:id="@+id/lft_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="leftBtnAction"
        android:text="@string/cancel_text" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:layout_marginTop="5dp"
        android:textSize="22sp"
        android:text="@string/registration_text" />

    <Button
        android:id="@+id/rght_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:onClick="rightBtnAction"
        android:text="@string/next_text" />

</RelativeLayout >
