<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newestbackground"
    android:orientation="vertical"
    tools:context=".GetStartedActivity1" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/logo_image" />

    <TextView
        android:id="@+id/trakR_txtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="@string/starting_text"
        android:textColor="#ffffff" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/screen_one" />

    <Button
        android:id="@+id/btn_get_started"
        android:layout_width="wrap_content"
        android:background="@drawable/custom_buttons"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/get_started_btn_text"
        android:onClick="getStarted"
        />

</LinearLayout>