<?xml version="1.0" encoding="utf-8"?>
<!-- Item Fragment layout -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingTop="20dip"
              android:paddingLeft="20dip"
              android:paddingRight="20dip"
        >
    <ImageView
            android:id="@+id/itemPageTray"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/item_page_tray"
            android:scaleType="fitXY"
            android:clickable="true"
        />

    <!-- Sample of how page tray looks with a transparent red background, performed programmatically in the app -->
    <!--<ImageView-->
            <!--android:id="@+id/itemPageTray"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:src="@drawable/item_page_tray"-->
            <!--android:scaleType="fitXY"-->
            <!--android:background="@drawable/rectangle_rounded_right_red_transparent"-->
        <!--/>-->

    <ImageView
            android:id="@+id/iconAudioAlertsDisabled"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="20dip"
            android:background="@drawable/no_audio_alerts_icon"
            android:visibility="gone"
            android:contentDescription="@string/contentDescriptionAudioAlertsDisabledIcon"
        />

    <ImageView
            android:id="@+id/inSiteLogo"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_no_tag_line"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/contentDescriptionInSiteLogo"
            android:clickable="true"
            />
    <LinearLayout
            android:layout_width="80dip"
            android:layout_height="40dip"
            android:id="@+id/batteryTextAndImage"
            android:layout_below="@id/inSiteLogo"
            android:layout_alignParentRight="true"
            android:orientation="vertical"
            >

        <TextView
                android:id="@+id/peripheralBatteryLevelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:visibility="invisible"
                android:textSize="10dip"
                />
        <ImageView
                android:id="@+id/peripheralBatteryLevelImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/links_grn_together"
                android:scaleType="fitCenter"
                android:visibility="invisible"
                android:contentDescription="@string/contentDescriptionBatteryLevelImage"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_width="120dip"
            android:layout_height="200dip"
            android:id="@+id/rssiTextAndImage"
            android:layout_below="@id/inSiteLogo"
            android:layout_alignParentRight="true"
            android:orientation="vertical"
            android:layout_marginRight="30dip"
            >

        <ImageView
                android:id="@+id/peripheralRssiImage"
                android:layout_width="fill_parent"
                android:layout_height="151dp"
                android:src="@drawable/proximity_04"
                android:scaleType="fitCenter"
                android:contentDescription="@string/contentDescriptionRssiStateImage"
                android:layout_marginBottom="-27dp"/>
        <TextView
                android:id="@+id/peripheralRssiText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textColor="@android:color/white"
                android:layout_below="@id/peripheralRssiImage"
                android:textSize="12dip"
                android:background="@android:color/transparent"
                android:text="Home"
                android:layout_gravity="center"/>
    </LinearLayout>
    <ImageView
            android:id="@+id/itemImage"
            android:layout_width="120dip"
            android:layout_height="120dip"
            android:layout_below="@id/inSiteLogo"
            android:layout_marginLeft="30dip"
            android:layout_marginTop="20dip"
            android:layout_marginBottom="10dip"
            android:src="@drawable/icon"
            android:onClick="onClick"
            android:contentDescription="@string/contentDescriptionDeviceImage"
            />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="25dip"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:cursorVisible="false"
            android:layout_marginLeft="30dip"
            android:id="@+id/peripheralName"
            android:layout_below="@id/itemImage"
            android:inputType="textCapWords"
            android:singleLine="true"
            android:imeOptions="actionDone"
            />

    <!--Test Buttons-->
    <include layout="@layout/item_view_test_controls_layout" />

    <ImageView
            android:id="@+id/buttonAlarm"
            android:layout_width="match_parent"
            android:layout_height="90dip"
            android:layout_marginTop="50dip"
            android:paddingTop="10dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingBottom="0dip"
            android:layout_below="@id/peripheralName"
            android:src="@drawable/button_speaker_waves_3"
            android:contentDescription="@string/contentDescriptionButtonAlarm"
            android:onClick="onClick"
            />
    <TextView
            android:id="@+id/buttonTextAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/buttonAlarm"
            android:layout_alignRight="@id/buttonAlarm"
            android:layout_alignTop="@id/buttonAlarm"
            android:layout_alignBottom="@id/buttonAlarm"
            android:layout_marginLeft="120dip"
            android:gravity="center"
            android:text="@string/ringDevice"
            android:textColor="@android:color/white"
            />
    <ImageView
            android:id="@+id/buttonLocate"
            android:layout_width="wrap_content"
            android:layout_height="90dip"
            android:paddingTop="0dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingBottom="10dip"
            android:layout_below="@id/buttonAlarm"
            android:src="@drawable/button_locate"
            android:contentDescription="@string/contentDescriptionButtonLocate"
            android:onClick="onClick"
            />
    <TextView
            android:id="@+id/buttonTextLocate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/buttonLocate"
            android:layout_alignRight="@id/buttonLocate"
            android:layout_alignTop="@id/buttonLocate"
            android:layout_alignBottom="@id/buttonLocate"
            android:layout_marginLeft="120dip"
            android:gravity="center"
            android:text="@string/locateDevice"
            android:textColor="@android:color/white"
            />
    <ImageView
            android:id="@+id/labelPoweredBy"
            android:layout_width="match_parent"
            android:layout_height="20dip"
            android:layout_below="@id/buttonLocate"
            android:src="@drawable/audiovox_powered_by_phonehalo"
            android:scaleType="fitCenter"
            android:contentDescription="@string/contentDescriptionAudiovoxPoweredByPhoneHalo"
            />

</RelativeLayout>