<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newestbackground"
    android:orientation="vertical"
    tools:context=".RegistrationActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/reg_txtVw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/registrationTxt"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/first_name_txtVw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/first_name_text"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/first_name_editTxtVw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:inputType="text"
                android:textColor="@color/White" >
            </EditText>

            <TextView
                android:id="@+id/last_name_txtVw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/last_name_text"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/last_name_editTxtVw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:inputType="text"
                android:textColor="@color/White" >
            </EditText>

            <TextView
                android:id="@+id/email_txtVw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/email_txt"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_editTxtVw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="@color/White" >
            </EditText>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/image_description"
                android:src="@drawable/itemtrackr_ph_logos" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>