<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal"
              android:baselineAligned="false"
              android:background="@drawable/newestbackground"
        >

    <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            >

        <ImageView
                android:id="@+id/imageTakePhoto"
                android:layout_width="match_parent"
                android:layout_height="120dip"
                android:src="@drawable/item_icon_create_with_camera"
                android:scaleType="fitCenter"
                android:onClick="onClick"/>
        <TextView
                android:id="@+id/textTakePhoto"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:layout_gravity="center"
                android:textSize="20dip"
                android:text="@string/useYourOwn"
                android:textColor="@android:color/white"
                android:onClick="onClick"/>
        <ImageView
                android:id="@+id/imageKeys"
                android:layout_width="match_parent"
                android:layout_height="120dip"
                android:src="@drawable/item_icon_car_key_fob"
                android:scaleType="fitCenter"
                android:onClick="onClick"/>
        <TextView
                android:id="@+id/textKeys"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:layout_gravity="center"
                android:textSize="20dip"
                android:text="@string/keys"
                android:textColor="@android:color/white"
                android:onClick="onClick"/>
        <ImageView
                android:id="@+id/imageBriefcase"
                android:layout_width="match_parent"
                android:layout_height="120dip"
                android:scaleType="fitCenter"
                android:src="@drawable/item_icon_briefcase"
                android:onClick="onClick"/>
        <TextView
                android:id="@+id/textBriefcase"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:layout_gravity="center"
                android:textSize="20dip"
                android:text="@string/briefcase"
                android:textColor="@android:color/white"
                android:onClick="onClick"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            >

        <ImageView
                android:id="@+id/imageWallet"
                android:layout_width="match_parent"
                android:layout_height="120dip"
                android:scaleType="fitCenter"
                android:src="@drawable/item_icon_wallet"
                android:onClick="onClick"/>
        <TextView
                android:id="@+id/textWallet"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:layout_gravity="center"
                android:textSize="20dip"
                android:text="@string/wallet"
                android:textColor="@android:color/white"
                android:onClick="onClick"/>
        <ImageView
                android:id="@+id/imagePurse"
                android:layout_width="match_parent"
                android:layout_height="120dip"
                android:scaleType="fitCenter"
                android:src="@drawable/item_icon_purse"
                android:onClick="onClick"/>
        <TextView
                android:id="@+id/textPurse"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:layout_gravity="center"
                android:textSize="20dip"
                android:text="@string/purse"
                android:textColor="@android:color/white"
                android:onClick="onClick"/>
        <ImageView
                android:id="@+id/imageCamera"
                android:layout_width="match_parent"
                android:layout_height="120dip"
                android:scaleType="fitCenter"
                android:src="@drawable/item_icon_camera"
                android:onClick="onClick"/>
        <TextView
                android:id="@+id/textCamera"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:layout_gravity="center"
                android:textSize="20dip"
                android:text="@string/cameraBag"
                android:textColor="@android:color/white"
                android:onClick="onClick"/>
    </LinearLayout>


</LinearLayout>